Bump version to 3.0.0 and update plugin metadata